stateDiagram-v2
    [*] --> Unbound : DatagramSocket DatagramSocket([DatagramSocketImpl impl])
    [*] --> Bound : DatagramSocket DatagramSocket()
    [*] --> Bound : DatagramSocket DatagramSocket([SocketAddress bindaddr])
    [*] --> Bound : DatagramSocket DatagramSocket([int port])
    [*] --> Bound : DatagramSocket DatagramSocket([int port], [InetAddress laddr])

    Unbound --> Bound : void bind([SocketAddress addr])
    Unbound --> Connected : void connect([InetAddress address], [int port])
    Unbound --> Connected : void connect([SocketAddress addr])
    Unbound --> Unbound : void disconnect()
    Unbound --> Unbound : boolean isBound()
    Unbound --> Unbound : boolean isConnected()
    Unbound --> Unbound : boolean isClosed()
    Unbound --> Unbound : InetAddress getInetAddress()
    Unbound --> Unbound : int getPort()
    Unbound --> Unbound : SocketAddress getRemoteSocketAddress()
    Unbound --> Unbound : SocketAddress getLocalSocketAddress()
    Unbound --> Unbound : InetAddress getLocalAddress()
    Unbound --> Unbound : int getLocalPort()
    Unbound --> Unbound : void setSoTimeout([int timeout])
    Unbound --> Unbound : int getSoTimeout()
    Unbound --> Unbound : void setSendBufferSize([int size])
    Unbound --> Unbound : int getSendBufferSize()
    Unbound --> Unbound : void setReceiveBufferSize([int size])
    Unbound --> Unbound : int getReceiveBufferSize()
    Unbound --> Unbound : void setReuseAddress([boolean on])
    Unbound --> Unbound : boolean getReuseAddress()
    Unbound --> Unbound : void setBroadcast([boolean on])
    Unbound --> Unbound : boolean getBroadcast()
    Unbound --> Unbound : void setTrafficClass([int tc])
    Unbound --> Unbound : int getTrafficClass()
    Unbound --> Unbound : DatagramChannel getChannel()
    Unbound --> Unbound : void setOption([T T])
    Unbound --> Unbound : void getOption([T T])
    Unbound --> Unbound : void supportedOptions()
    Unbound --> Closed : void close()

    Bound --> Connected : void connect([InetAddress address], [int port])
    Bound --> Connected : void connect([SocketAddress addr])
    Bound --> Bound : void disconnect()
    Bound --> Bound : void send([DatagramPacket p])
    Bound --> Bound : void receive([DatagramPacket p])
    Bound --> Bound : boolean isBound()
    Bound --> Bound : boolean isConnected()
    Bound --> Bound : boolean isClosed()
    Bound --> Bound : InetAddress getInetAddress()
    Bound --> Bound : int getPort()
    Bound --> Bound : SocketAddress getRemoteSocketAddress()
    Bound --> Bound : SocketAddress getLocalSocketAddress()
    Bound --> Bound : InetAddress getLocalAddress()
    Bound --> Bound : int getLocalPort()
    Bound --> Bound : void setSoTimeout([int timeout])
    Bound --> Bound : int getSoTimeout()
    Bound --> Bound : void setSendBufferSize([int size])
    Bound --> Bound : int getSendBufferSize()
    Bound --> Bound : void setReceiveBufferSize([int size])
    Bound --> Bound : int getReceiveBufferSize()
    Bound --> Bound : void setReuseAddress([boolean on])
    Bound --> Bound : boolean getReuseAddress()
    Bound --> Bound : void setBroadcast([boolean on])
    Bound --> Bound : boolean getBroadcast()
    Bound --> Bound : void setTrafficClass([int tc])
    Bound --> Bound : int getTrafficClass()
    Bound --> Bound : DatagramChannel getChannel()
    Bound --> Bound : void setOption([T T])
    Bound --> Bound : void getOption([T T])
    Bound --> Bound : void supportedOptions()
    Bound --> Bound : void joinGroup([SocketAddress mcastaddr], [NetworkInterface netIf])
    Bound --> Bound : void leaveGroup([SocketAddress mcastaddr], [NetworkInterface netIf])
    Bound --> Closed : void close()

    Connected --> Bound : void disconnect()
    Connected --> Connected : void connect([InetAddress address], [int port])
    Connected --> Connected : void connect([SocketAddress addr])
    Connected --> Connected : void send([DatagramPacket p])
    Connected --> Connected : void receive([DatagramPacket p])
    Connected --> Connected : boolean isBound()
    Connected --> Connected : boolean isConnected()
    Connected --> Connected : boolean isClosed()
    Connected --> Connected : InetAddress getInetAddress()
    Connected --> Connected : int getPort()
    Connected --> Connected : SocketAddress getRemoteSocketAddress()
    Connected --> Connected : SocketAddress getLocalSocketAddress()
    Connected --> Connected : InetAddress getLocalAddress()
    Connected --> Connected : int getLocalPort()
    Connected --> Connected : void setSoTimeout([int timeout])
    Connected --> Connected : int getSoTimeout()
    Connected --> Connected : void setSendBufferSize([int size])
    Connected --> Connected : int getSendBufferSize()
    Connected --> Connected : void setReceiveBufferSize([int size])
    Connected --> Connected : int getReceiveBufferSize()
    Connected --> Connected : void setReuseAddress([boolean on])
    Connected --> Connected : boolean getReuseAddress()
    Connected --> Connected : void setBroadcast([boolean on])
    Connected --> Connected : boolean getBroadcast()
    Connected --> Connected : void setTrafficClass([int tc])
    Connected --> Connected : int getTrafficClass()
    Connected --> Connected : DatagramChannel getChannel()
    Connected --> Connected : void setOption([T T])
    Connected --> Connected : void getOption([T T])
    Connected --> Connected : void supportedOptions()
    Connected --> Closed : void close()

    Closed --> Closed : void close()
    Closed --> Closed : boolean isBound()
    Closed --> Closed : boolean isConnected()
    Closed --> Closed : boolean isClosed()
    Closed --> Closed : InetAddress getInetAddress()
    Closed --> Closed : int getPort()
    Closed --> Closed : SocketAddress getRemoteSocketAddress()
    Closed --> Closed : SocketAddress getLocalSocketAddress()
    Closed --> Closed : void supportedOptions()
    Closed --> Closed : DatagramChannel getChannel()
    Closed --> Closed : void disconnect()
    Closed --> [*]

    note right of Unbound
        Created via DatagramSocket(DatagramSocketImpl).
        bind() throws SocketException if already bound.
        setReuseAddress() should be called before bind().
        connect() auto-binds if not yet bound.
    end note

    note right of Connected
        send() and receive() are restricted to the connected address.
        disconnect() returns socket to Bound state.
        A socket connected to multicast address may only send.
    end note

    note right of Closed
        Terminal state. close() is idempotent.
        setOption()/getOption() throw IOException if closed.
        isBound()/isConnected() return sticky true if previously set.
    end note
